Create the map boilerplate

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,11 @@
-<div>TODO:</div>
+<div id="header">
+    <button
+        id="logo-button"
+        type="button"
+        class="btn"
+    >Quality of Life Index Map</button>
+</div>
+
+<qoli-atlas (openSidebar)="onOpenSidebar($event, 'filter-button')"></qoli-atlas>
 
 <router-outlet></router-outlet>
