Update selector names

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,6 @@
     >Quality of Life Index Map</button>
 </div>
 
-<qoli-atlas (openSidebar)="onOpenSidebar($event, 'filter-button')"></qoli-atlas>
+<app-atlas (openSidebar)="onOpenSidebar($event, 'filter-button')"></app-atlas>
 
 <router-outlet></router-outlet>
