--- a/src/app/views/sidebar/sidebar.component.html
+++ b/src/app/views/sidebar/sidebar.component.html
@@ -9,8 +9,8 @@
 </div>
 
 <div class="offcanvas-body">
-    <app-global-filter
+    <app-atlas-filter
         [filter]="filter"
         [onActiveButtonResets]="onActiveButtonResets"
-    ></app-global-filter>
+    ></app-atlas-filter>
 </div>
