Fix the filter & colors on the map

--- a/src/app/views/sidebar/sidebar.component.html
+++ b/src/app/views/sidebar/sidebar.component.html
@@ -9,8 +9,5 @@
 </div>
 
 <div class="offcanvas-body">
-    <app-atlas-filter
-        [filter]="filter"
-        [onActiveButtonResets]="onActiveButtonResets"
-    ></app-atlas-filter>
+    <app-atlas-filter [onActiveButtonResets]="onActiveButtonResets"></app-atlas-filter>
 </div>
