--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -15,3 +15,12 @@ $cho-filter-header-box: $cho-filter-header-height + (2 * $cho-filter-padding);
 
 $offcanvas-width: 400px; // var(--bs-offcanvas-width);
 $offcanvas-padding: 16px; // 1rem // var(--bs-offcanvas-padding-y)
+
+$size-xxsmall: 2px;
+$size-xsmall: 4px;
+$size-small: 8px;
+$size-medium: 16px;
+$size-large: 24px;
+$size-xlarge: 32px;
+$size-xxlarge: 48px;
+$size-xxxlarge: 64px;
