--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,29 +1,20 @@
 <div id="header">
     <button
-        id="logo-button"
+        *ngFor="let item of MENU_ITEMS"
+        [id]="item.id"
         type="button"
-        class="btn"
-    >Quality of Life Index Map</button>
-    <button
-        id="filter-button"
-        type="button"
-        [ngClass]="{'btn btn-light': true, 'active': activeButtonId === 'filter-button'}"
-        (click)="onOpenSidebar($event, 'filter-button')"
+        [ngClass]="{
+            'btn': true,
+            'btn-light': item.id !== MENU_ITEMS_IDS.LOGO,
+            'active': activeMenuItemId === item.id
+        }"
+        (click)="handleMenuItemClick($event, item)"
     >
-        <i class="bi bi-funnel"></i>
-        Filter
-    </button>
-    <button
-        id="map-button"
-        type="button"
-        [ngClass]="{'btn btn-light': true, 'active': activeButtonId === 'map-button'}"
-        (click)="onActiveButtonChanges('map-button')"
-    >
-        <i class="bi bi-pin-map"></i>
-        Map
+        <i *ngIf="item.iconClasses" class="bi bi-funnel"></i>
+        {{ item.label }}
     </button>
 </div>
 
-<app-atlas (openSidebar)="onOpenSidebar($event, 'filter-button')"></app-atlas>
+<app-atlas (openSidebar)="handleOpenSidebar($event, MENU_ITEMS_IDS.FILTER)"></app-atlas>
 
 <router-outlet></router-outlet>
