Preserve the filter between states

--- a/src/app/views/atlas/sidebar-filter/atlas-filter/atlas-filter.component.html
+++ b/src/app/views/atlas/sidebar-filter/atlas-filter/atlas-filter.component.html
@@ -31,7 +31,7 @@
             <button class="btn btn-md btn-success" type="submit" (click)="onSubmit()" [disabled]="filter.isDisabled()">
                 Apply Filter
             </button>
-            <button class="btn btn-md btn-secondary" type="reset" (click)="onReset()">
+            <button class="btn btn-md btn-secondary" type="submit" (click)="onReset()">
                 Reset Filter
             </button>
         </div>
