--- a/src/app/views/atlas/sidebar-filter/atlas-filter/atlas-filter.component.scss
+++ b/src/app/views/atlas/sidebar-filter/atlas-filter/atlas-filter.component.scss
@@ -62,8 +62,7 @@
                 display: flex;
                 gap: 16px;
 
-                > button[type='submit'],
-                > button[type='reset'] {
+                > button[type='submit'] {
                     width: 50%;
                 }
             }
