--- a/src/app/views/atlas/sidebar-filter/atlas-filter/atlas-filter-main-section/atlas-filter-main-section.component.html
+++ b/src/app/views/atlas/sidebar-filter/atlas-filter/atlas-filter-main-section/atlas-filter-main-section.component.html
@@ -1,29 +1,57 @@
-<div [formGroup]="form">
-    <div class="row">
-        <div class="col-md-8 mb-3">
-            <select
-                class="form-select form-select-sm"
-                id="year"
-                formControlName="year"
-                (change)="onYearChanges($event)"
-            >
-                <option [ngValue]="null" selected disabled>Analyzed Year</option>
-                <option *ngFor="let year of AVAILABLE_INTERVAL" [ngValue]="year">{{ year }}</option>
-            </select>
-        </div>
-    </div>
+<!--<div [formGroup]="form">-->
+<!--    <div class="row">-->
+<!--        <div class="col-md-8 mb-3">-->
+<!--            <select-->
+<!--                class="form-select form-select-sm"-->
+<!--                id="year"-->
+<!--                formControlName="year"-->
+<!--                (change)="onYearChanges($event)"-->
+<!--            >-->
+<!--                <option [ngValue]="null" selected disabled>Analyzed Year</option>-->
+<!--                <option *ngFor="let year of AVAILABLE_INTERVAL" [ngValue]="year">{{ year }}</option>-->
+<!--            </select>-->
+<!--        </div>-->
+<!--    </div>-->
 
-    <div class="row">
-        <div class="col-md-8 mb-3">
-            <select
-                class="form-select form-select-sm"
-                id="categoryLabel"
-                formControlName="categoryLabel"
-                (change)="onCategoryLabelChanges($event)"
-            >
-                <option [ngValue]="null" selected disabled>Dimension Name</option>
-                <option *ngFor="let categoryLabel of LIFE_INDEX_LABELS" [ngValue]="categoryLabel">{{ categoryLabel }}</option>
-            </select>
-        </div>
-    </div>
+<!--    <div class="row">-->
+<!--        <div class="col-md-8 mb-3">-->
+<!--            <select-->
+<!--                class="form-select form-select-sm"-->
+<!--                id="categoryLabel"-->
+<!--                formControlName="categoryLabel"-->
+<!--                (change)="onCategoryLabelChanges($event)"-->
+<!--            >-->
+<!--                <option [ngValue]="null" selected disabled>Dimension Name</option>-->
+<!--                <option *ngFor="let categoryLabel of LIFE_INDEX_LABELS" [ngValue]="categoryLabel">{{ categoryLabel }}</option>-->
+<!--            </select>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</div>-->
+
+<div [formGroup]="qoliForm">
+    <mat-form-field>
+        <mat-label>Quality of Life Index</mat-label>
+        <mat-select>
+            <mat-option>-- None --</mat-option>
+            <mat-optgroup [label]="qoliFilter.label">
+                <mat-optgroup *ngFor="let dimension of qoliFilter.aggregators">
+                    <mat-checkbox
+                        [formControlName]="dimension.filename"
+                        [checked]="dimension.checked"
+                        [indeterminate]="someChecked(dimension)"
+                        (change)="onDimensionChanges(dimension)"
+                    >{{dimension.label}}</mat-checkbox>
+                    <ul class="checkbox-items">
+                        <li *ngFor="let indicator of dimension.aggregators">
+                            <mat-checkbox
+                                [formControlName]="dimension.filename + ':' + indicator.filename"
+                                [checked]="indicator.checked"
+                                (change)="onIndicatorChanges(dimension, indicator)"
+                            >{{indicator.label}}</mat-checkbox>
+                        </li>
+                    </ul>
+                </mat-optgroup>
+            </mat-optgroup>
+        </mat-select>
+    </mat-form-field>
 </div>
