--- a/src/app/views/atlas/sidebar-filter/atlas-filter/atlas-filter.component.html
+++ b/src/app/views/atlas/sidebar-filter/atlas-filter/atlas-filter.component.html
@@ -22,7 +22,7 @@
                     </button>
                 </ng-template>
                 <ng-template ngbPanelContent>
-                    <app-atlas-filter-main-section [form]="form"></app-atlas-filter-main-section>
+                    <app-atlas-filter-main-section [filter]="filter" [form]="form"></app-atlas-filter-main-section>
                 </ng-template>
             </ngb-panel>
         </ngb-accordion>
