--- a/src/app/views/atlas/sidebar-filter/atlas-filter/atlas-filter-main-section/atlas-filter-main-section.component.html
+++ b/src/app/views/atlas/sidebar-filter/atlas-filter/atlas-filter-main-section/atlas-filter-main-section.component.html
@@ -1,3 +1,4 @@
+<!-- TODO: revisit -->
 <!--<div [formGroup]="form">-->
 <!--    <div class="row">-->
 <!--        <div class="col-md-8 mb-3">-->
@@ -18,8 +19,8 @@
     <mat-label>Quality of Life Index</mat-label>
     <mat-select>
         <mat-option>-- None --</mat-option>
-        <mat-optgroup [label]="filter.primaryFilter.qoliOptions.label">
-            <mat-optgroup *ngFor="let dimension of filter.primaryFilter.qoliOptions.aggregators">
+        <mat-optgroup [label]="filter.baseFilter.qoliOptions.label">
+            <mat-optgroup *ngFor="let dimension of filter.baseFilter.qoliOptions.aggregators">
                 <mat-checkbox
                     [formControlName]="dimension.filename"
                     [checked]="dimension.checked"
