Fix the ExpressionChangedAfterItHasBeenCheckedError error

--- a/src/app/views/atlas/sidebar-filter/atlas-filter/atlas-filter.component.html
+++ b/src/app/views/atlas/sidebar-filter/atlas-filter/atlas-filter.component.html
@@ -1,6 +1,6 @@
 <div class="global-filter">
     <button [ngClass]="{'btn btn-counter': true, disabled: true}">
-        Results: {{ child?.getSelectedCountries()?.length }} countries
+        {{ headerLabel }}
     </button>
 
     <form class="needs-validation" [formGroup]="form">
