--- a/src/app/views/atlas/sidebar-filter/atlas-filter/atlas-filter.component.html
+++ b/src/app/views/atlas/sidebar-filter/atlas-filter/atlas-filter.component.html
@@ -21,7 +21,7 @@
         </ngb-accordion>
 
         <div class="form-footer">
-            <button class="btn btn-md btn-success" type="submit" (click)="onSubmit()">
+            <button class="btn btn-md btn-success" type="submit" (click)="onSubmit()" [disabled]="filter.isDisabled(form)">
                 Apply Filter
             </button>
             <button class="btn btn-md btn-secondary" type="submit" (click)="onReset()">
