--- a/src/app/views/atlas/sidebar-filter/atlas-filter/atlas-filter.component.html
+++ b/src/app/views/atlas/sidebar-filter/atlas-filter/atlas-filter.component.html
@@ -1,9 +1,9 @@
 <div class="global-filter">
     <button [ngClass]="{'btn btn-counter': true, disabled: true}">
-        Results: {{ this.form.get('countries')?.value?.length }} countries
+        Results: {{ atlasFilter.form.get('countries')?.value?.length }} countries
     </button>
 
-    <form class="needs-validation" [formGroup]="form">
+    <form class="needs-validation" [formGroup]="atlasFilter.form">
         <ngb-accordion activeIds="atlas-filter-main-section">
             <ngb-panel id="atlas-filter-main-section">
                 <ng-template ngbPanelTitle>
@@ -21,7 +21,7 @@
         </ngb-accordion>
 
         <div class="form-footer">
-            <button class="btn btn-md btn-success" type="submit" (click)="onSubmit()" [disabled]="filter.isDisabled(form)">
+            <button class="btn btn-md btn-success" type="submit" (click)="onFilterApply()" [disabled]="atlasFilter.isDisabled()">
                 Apply Filter
             </button>
             <button class="btn btn-md btn-secondary" type="submit" (click)="onReset()">
